# rules_carbon

./: .gitignore  .pre-commit-config.yaml  MODULE.bazel  README.rst  WORKSPACE.bazel
carbon/: BUILD.bazel  carbon.bzl  defs.bzl  toolchain.bzl
examples/: MODULE.bazel
examples/hello_world/: BUILD.bazel  hello_world.carbon
